@@ -7,6 +7,7 @@ import org.apache.ibatis.annotations.Param;
 import org.apache.ibatis.annotations.Select;
 import org.apache.ibatis.annotations.Update;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -23,9 +24,10 @@ public interface BaseTableMapper<T> extends BaseMapper<T> {
         Object o = null;
 
         try {
-            o = c.newInstance();
-        } catch (IllegalAccessException | InstantiationException var3) {
-            var3.printStackTrace();
+            o = c.getDeclaredConstructor().newInstance();
+        } catch (InvocationTargetException | NoSuchMethodException | IllegalAccessException | InstantiationException e) {
+            e.printStackTrace();
+            throw new RuntimeException("初始化方法 BaseTableMapper.getT 失败!", e);
         }
 
         t.put("tClass", c);
@@ -33,6 +35,11 @@ public interface BaseTableMapper<T> extends BaseMapper<T> {
         return o;
     }
 
+    /**
+     * 获取结果Map
+     * @param queryWrapper
+     * @return
+     */
     @Select("<script>" +
             "select ${ew.paramNameValuePairs.cr} from ${ew.paramNameValuePairs.table} " +
             "${ew.customSqlSegment} " +
@@ -43,7 +50,11 @@ public interface BaseTableMapper<T> extends BaseMapper<T> {
             "</script>")
     Map<String, Object> getObjs(@Param("ew") BaseQueryWrapper queryWrapper);
 
-
+    /**
+     * 获取Map列表
+     * @param queryWrapper
+     * @return
+     */
     @Select("<script>" +
             "select ${ew.paramNameValuePairs.cr} from ${ew.paramNameValuePairs.table} " +
             "${ew.customSqlSegment} " +
@@ -57,6 +68,11 @@ public interface BaseTableMapper<T> extends BaseMapper<T> {
             "</script>")
     List<Map<String, Object>> getObjLists(@Param("ew") BaseQueryWrapper queryWrapper);
 
+    /**
+     * 更新
+     * @param queryWrapper
+     * @return
+     */
     @Update("<script>" +
             "update ${ew.paramNameValuePairs.table} set ${ew.paramNameValuePairs.cr} ${ew.customSqlSegment}" +
             "<if test='ew.customSqlSegment == null or ew.customSqlSegment == \"\" and ew.paramNameValuePairs.eqTable != null and ew.paramNameValuePairs.eqTable != \"\"'>" +
@@ -69,6 +85,11 @@ public interface BaseTableMapper<T> extends BaseMapper<T> {
             "</script>")
     int updates(@Param("ew") BaseQueryWrapper queryWrapper);
 
+    /**
+     * 删除
+     * @param queryWrapper
+     * @return
+     */
     @Delete("<script>" +
             "delete ${ew.paramNameValuePairs.table} from ${ew.paramNameValuePairs.table} ${ew.customSqlSegment}" +
             "<if test='ew.customSqlSegment == null or ew.customSqlSegment == \"\" and ew.paramNameValuePairs.eqTable != null and ew.paramNameValuePairs.eqTable != \"\"'>" +
